--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
       # 빌드 (Spring Boot)
       - name: Build with Gradle
