--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,22 +14,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # JDK 설치 (필요시)
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
-          
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      # 빌드 (Spring Boot)
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      # 서버에 SSH 접속해 docker-compose로 배포
-      - name: Deploy via SSH
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Docker Build & Tag
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:latest .
+
+      - name: Docker Push
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:latest
+
+      - name: Deploy via SSH (pull image & up)
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -37,6 +45,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /home/zezeonekesb/backend
-            git pull origin main
+            docker-compose pull
             docker-compose down
-            docker-compose up -d --build
+            docker-compose up -d --remove-orphans
+            docker image prune -f
