--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   mongo:
-    image: mongo:6.0
+    image: zezeonekesb/backend:latest
     container_name: mongo
     restart: always
     ports:
