--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:cache
-          cache-to:   type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:cache,mode=max
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:cache,mode=max
 
       - name: Deploy via SSH (pull image & up)
         uses: appleboy/ssh-action@master
@@ -48,6 +48,5 @@ jobs:
           script: |
             cd /home/zezeonekesb/backend
             docker-compose pull
-            docker-compose down
-            docker-compose up -d --remove-orphans
+            docker-compose up -d --remove-orphans --force-recreate
             docker image prune -f
