--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: "3.8"
 
 services:
   mongo:
-    image: zezeonekesb/backend:latest
+    image: mongo:6.0
     container_name: mongo
     restart: always
     ports:
       - "27017:27017"
-    command: mongod --bind_ip_all
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
@@ -17,10 +16,9 @@ services:
       - app-network
 
   spring-app:
+    image: zezeonekesb/backend:latest
     container_name: spring-app
-    build:
-      context: .
-      dockerfile: Dockerfile
+    restart: always
     ports:
       - "8080:8080"
     depends_on:
