feat: 세션 기반 인증 코드를 작성

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -12,6 +12,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network
 
   spring-app:
     build:
