--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,16 +42,25 @@ jobs:
       - name: Create .env file from secret
         run: printf '%s' "${{ secrets.ENV_FILE }}" > .env
 
+      # 파일들이 존재하는지 확인
+      - name: Verify files exist
+        run: |
+          echo "Checking files in current directory:"
+          ls -la
+          echo "Checking if docker-compose.yml exists:"
+          test -f docker-compose.yml && echo "docker-compose.yml exists" || echo "docker-compose.yml missing"
+          echo "Checking if .env exists:"
+          test -f .env && echo ".env exists" || echo ".env missing"
+
       - name: Copy docker-compose.yml and .env to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: |
-            docker-compose.yml
-            .env
+          source: "docker-compose.yml,.env"
           target: "/home/zezeonekesb/backend"
+          strip_components: 0
 
       - name: Deploy via SSH (pull image & up)
         uses: appleboy/ssh-action@master
