--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
           echo "${{ secrets.APPLICATION_YML }}" | base64 -d > src/main/resources/application.yml
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x test
 
       - name: Docker Login
         uses: docker/login-action@v3
