feat: GCS 인증 코드 작성

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -28,6 +28,8 @@ services:
       - .env
     environment:
       SPRING_PROFILES_ACTIVE: local
+    volumes:
+      - C:/service-account.json:/app/service-account.json
     networks:
       - app-network
 
