refactor: GCS 코드 수정 및 예외처리 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       MONGO_DB_NAME: ${MONGO_DB_NAME}
     volumes:
-      - /home/zezeonekesb/service-account.json:/app/service-account.json
+      - ${GCS_SERVICE_ACCOUNT_PATH}:/app/service-account.json
     networks:
       - app-network
 
