--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     # HTTP → HTTPS 리디렉션
     server {
         listen 80;
-        server_name zezeone-sf.kro.kr;
+        server_name zezeone-sf.p-e.kr;
 
         location / {
             return 301 https://$host$request_uri;
@@ -23,10 +23,10 @@ http {
     # HTTPS 처리 (SSL)
     server {
         listen 443 ssl;
-        server_name zezeone-sf.kro.kr;
+        server_name zezeone-sf.p-e.kr;
 
-        ssl_certificate     /etc/letsencrypt/live/zezeone-sf.kro.kr/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/zezeone-sf.kro.kr/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/zezeone-sf.p-e.kr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/zezeone-sf.p-e.kr/privkey.pem;
 
         location / {
             proxy_pass http://spring_app;
