refactor: cors 도메인 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,22 @@ http {
 
     # HTTPS 처리 (SSL)
     server {
+        listen 80;
+        server_name zezeone-sf.site api.zezeone-sf.site;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+        location /nginx-health {
+            return 200 'ok';
+            add_header Content-Type text/plain;
+        }
+    }
+
+    server {
         listen 443 ssl;
-        server_name zezeone-sf.site;
+        server_name zezeone-sf.site api.zezeone-sf.site;
 
         ssl_certificate     /etc/letsencrypt/live/zezeone-sf.site/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/zezeone-sf.site/privkey.pem;
